force-app/main/default/objects/DNA_Financial_Account_Field__mdt/DNA_Financial_Account_Field__mdt.object-meta.xml
<CustomObject>
    <label>DNA Financial Account Field</label>
    <pluralLabel>DNA Financial Account Fields</pluralLabel>
</CustomObject>