force-app/main/default/objects/DNA_Financial_Account_Field__mdt/fields/DNA_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>DNA_Field_Name__c</fullName>
    <label>DNA Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>