force-app/main/default/objects/DNA_Financial_Account_Field__mdt/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External Id</label>
    <type>Checkbox</type>
</CustomField>